feat: add BLE module and docs

--- a/platformio.ini
+++ b/platformio.ini
@@ -6,6 +6,7 @@ framework = arduino
 # 只需要 IMU 的库，不再需要任何 RTOS 库
 lib_deps =
     arduino-libraries/Arduino_BMI270_BMM150
+    arduino-libraries/ArduinoBLE
 
 # 我们不再需要手动调整编译标志了，Mbed OS 会处理好一切
 
